# thaiminh-todo

./: .firebaserc  .gitignore  Cargo.toml  README.md  commands.txt  database.rules.json  firebase.json  index.html  index.js  package-lock.json  package.json
.firebase/: hosting.ZGlzdA.cache
src/: main.rs
src/bridge/: auth.rs  db.rs  generic.rs  mod.rs  storage.rs
src/bridge/js/: auth.js  db.js  generic.js  storage.js
src/comps/: counter.rs  loginpage.rs  mod.rs  model.rs  notfound.rs  todo.rs
src/custom/: custom_button.rs  mod.rs
src/data/: mod.rs  route_data.rs  todo_data.rs  user_data.rs
styles/: _global_varibles.scss  generic.scss  root.scss
styles/pages/: counter.scss  loginpage.scss  main.scss  mainpage.scss  notfound.scss  todo.scss
