[package]
name = "tailwindcss-yew-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16" # Routing: https://yew.rs/router/ - https://yew.rs/router/example/
reqwest-wasm = "0.11.0"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
web-sys = "0.3.59"
serde = { version = "1.0.48", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.16"
chrono = "0.4" # Day and time stuff
gloo = "0.8"
gloo-timers = "0.2.4"

